# FBT_Test_Task

./: CMakeLists.txt  README.md
descriptions/: amotor.fb.yml
src/: CMakeLists.txt  motor-export-function.cpp
src/amotor/: amotor-base.h  amotor-fabric.cpp  amotor-fabric.h  amotor.cpp  amotor.h
test/: CMakeLists.txt  main.cpp
test/amotor/: amotor-mock-fbdata.h  amotor-test-example.cpp
